--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
         </button>
       </main>
       <!-- Footer -->
+
+      <footer class="media768-footer" id="footer-plain"></footer>
+
+      <!--
       <footer class="media768-footer">
         <div class="footer-logo">
           <a href="/index.html">
@@ -240,9 +244,12 @@
             </ul>
           </article>
         </div>
-      </footer>
+
+        
+      </footer> -->
     </div>
     <img src="/assets/img/footer-illustration.png" alt="footerImg" />
     <script src="/js/script.js"></script>
+    <script src="/js/footer.js"></script>
   </body>
 </html>
