--- a/html/contact.html
+++ b/html/contact.html
@@ -23,6 +23,8 @@
     ></script>
     <!-- Contact css link -->
     <link rel="stylesheet" href="../css/contact.css" />
+    <!-- General css link -->
+    <link rel="stylesheet" href="../css/style.css">
     <!-- Font Awesome Link -->
     <link
       rel="stylesheet"
@@ -31,6 +33,17 @@
     <title>Contact Form</title>
   </head>
   <body>
+
+    <div class="collection-container">
+
+      <!-- Nav Mobile Navigation-->
+      <div id="nav-container"></div>
+
+      <!-- Desktop Navigation-->
+      <div class="c-navigation__wrapper hidden" id="navig-wrapper">
+
+      </div>
+
     <div class="contact-container">
       <section class="form-title">
         <h2>Desert Resident CARD</h2>
@@ -244,6 +257,8 @@
       alt="footerImg"
     />
 
+    <script src="/js/script.js"></script>
+    <script src="/js/nav.js"></script>
     <script src="/js/validate.js"></script>
   </body>
 </html>
